--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
-    "jquery": "^3.1.0"
+    "express": "4.14.0",
+    "jquery": "3.1.0"
   }
 }
